--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    // This is the opening section for the quiz, this include the instructions and start button
     <section id="start-block" class="show">
         <h1>Baking Quiz Challenge</h1>
         <p>Try to answer the following questions correctly within the time limit.<br/><br/>Keep in mind that every incorrect answer will result in a 10 sec deduction.</p>
         <button id="start-button">Start Game</button>
     </section>
+    // This is the quiz section. This will hold the timer, high score section and questions and answers for the quiz
     <section id="quiz-block" class="hide">
         <div id="timer">Time:</div>
         <div id="score-block">High Score:</div>
-        <div id="quiz">Questions here</div>
+        <div id="quiz">
+            <div id="question"></div>
+            <div id="answers"></div>
+            <button id="next"></button>
+        </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
